--- a/config/config.example.jsonc
+++ b/config/config.example.jsonc
@@ -1,59 +1,46 @@
 {
-	"clientId": "1111111111111111111", // The id of the discord bot
-	"guildId": "1111111111111111111", // The id of the discord server
-	"mainColor": "#f6c42f", // The hex color of the embeds by default
+	"clientId": "1246663382065745921", // The id of the discord bot
+	"guildId": "1242478077695496372", // The id of the discord server
+	"mainColor": "#000000", // The hex color of the embeds by default
 	"lang": "main", // If you want to set english please set "main"
 
-	"openTicketChannelId": "1111111111111111111", // The id of the channel where the message to create a ticket will be sent
+	"openTicketChannelId": "1246663163500560435", // The id of the channel where the message to create a ticket will be sent
 
 	"ticketTypes": [
 		// You have a limit of 25 types (the limit of Discord)
 		{
 			"codeName": "category-one", // The name need to be in lowercase
-			"name": "Category One", // The name that will be displayed in the ticket
+			"name": "Purchase", // The name that will be displayed in the ticket
 			"description": "Description of Category One", // The description of the Ticket in Create Ticket Menu
-			"emoji": "💡", // The emoji of the type (can be blank)
-			"color": "", // Can be a hex color or blank to use the main color
-			"categoryId": "1111111111111111111", // The category id where the tickets will be created
-			"ticketNameOption": "💡ticket-TICKETCOUNT", // Here is all parameter: USERNAME, USERID, TICKETCOUNT (set to blank to use the default name)
+			"emoji": "🛒", // The emoji of the type (can be blank)
+			"color": "#000000", // Can be a hex color or blank to use the main color
+			"categoryId": "1242478077695496373", // The category id where the tickets will be created
+			"ticketNameOption": "🛒ticket-USERNAME", // Here is all parameter: USERNAME, USERID, TICKETCOUNT (set to blank to use the default name)
 			"customDescription": "", // The custom description of the ticket type, here is all parameter: USERNAME, USERID, TICKETCOUNT, REASON1, 2, ect (set to blank to use the default description)
 			"cantAccess": ["1111111111111111111"], // The roles who can't access to this ticket type
 			"askQuestions": false, // If the bot should ask the reason of the ticket
-			"questions": [], // Leave blank if you don't want to ask questions
-			"staffRoles": [] // Category specific staff role (instead of the default ones)
+			"questions": [What Do You Want To Purchase?], // Leave blank if you don't want to ask questions
+			"staffRoles": [1246666691509882990] // Category specific staff role (instead of the default ones)
 		},
 		{
 			"codeName": "category-two", // The name need to be in lowercase
-			"name": "Category Two", // The name that will be displayed in the ticket
+			"name": "Support", // The name that will be displayed in the ticket
 			"description": "Description of Category Two", // The description of the Ticket in Create Ticket Menu
-			"emoji": "🛑", // The emoji of the type (can be blank)
-			"color": "#f8312f", // Can be a hex color or blank to use the main color
+			"emoji": "🙋‍♂️", // The emoji of the type (can be blank)
+			"color": "#000000", // Can be a hex color or blank to use the main color
 			"categoryId": "1111111111111111111", // The category id where the tickets will be created
-			"ticketNameOption": "", // Here is all parameter: USERNAME, USERID, TICKETCOUNT (set to blank to use the default name)
+			"ticketNameOption": "🙋‍♂️Support-USERNAME", // Here is all parameter: USERNAME, USERID, TICKETCOUNT (set to blank to use the default name)
 			"customDescription": "Please explain your report in detail. If you have any images, please attach them to your message.", // The custom description of the ticket type, here is all parameter: USERNAME, USERID, TICKETCOUNT, REASON1, 2, ect (set to blank to use the default description)
 			"cantAccess": ["2222222222222222222"], // The roles who can't access to this ticket type
 			"askQuestions": false, // If the bot should ask the reason of the ticket
 			"questions": [], // Leave blank if you don't want to ask questions
-			"staffRoles": [] // Category specific staff role (instead of the default ones)
+			"staffRoles": [1246769386111635537] // Category specific staff role (instead of the default ones)
 		},
-		{
-			"codeName": "other", // The name need to be in lowercase
-			"name": "Other", // The name that will be displayed in the ticket
-			"description": "Description of Category Other", // The description of the Ticket in Create Ticket Menu
-			"emoji": "", // The emoji of the type (can be blank)
-			"color": "", // Can be a hex color or blank to use the main color
-			"categoryId": "1111111111111111111", // The category id where the tickets will be created
-			"ticketNameOption": "", // Here is all parameter: USERNAME, USERID, TICKETCOUNT (set to blank to use the default name)
-			"customDescription": "Thank you for your ticket, a staff will reply you as soon as possible\n\n__**What is the reason of the ticket?**__: REASON1", // The custom description of the ticket type, here is all parameter: USERNAME, USERID, TICKETCOUNT, REASON1, 2, ect (set to blank to use the default description)
-			"cantAccess": [], // The roles who can't access to this ticket type
-			"askQuestions": true, // If the bot should ask the reason of the ticket
-			"staffRoles": [], // Category specific staff role (instead of the default ones)
-			"questions": [
-				// Maximum of 5 questions can be set due to discord's limit
+		
 				{
 					"label": "What is the reason of the ticket?",
 					"placeholder": "Please enter the reason",
-					"style": "PARAGRAPH", // SHORT or PARAGRAPH
+					"style": "Short", // SHORT or PARAGRAPH
 					"maxLength": 1000
 				}
 			]
@@ -63,7 +50,7 @@
 
 	// Ticket Claim Options
 	"claimOption": {
-		"claimButton": true, // Whether to enable ticket claim button or not
+		"claimButton": false, // Whether to enable ticket claim button or not
 		// The X can be replaced with S (The staff that claimed the ticket) or U (The user that created the ticket)
 		"nameWhenClaimed": "✔️ Ticket-TICKETCOUNT", // Here is all parameter: X_USERNAME, X_USERID, TICKETCOUNT
 		"categoryWhenClaimed": "" // The category the ticket is moved to when claimed
@@ -74,7 +61,7 @@
 	"rolesWhoCanNotCreateTickets": [], // Roles who can	not create a tickets (Like a blacklist)
 
 	"pingRoleWhenOpened": true,
-	"roleToPingWhenOpenedId": ["1111111111111111111"], // The role to ping when a ticket is opened
+	"roleToPingWhenOpenedId": ["1246666691509882990"], // The role to ping when a ticket is opened
 
 	"logs": true,
 	"logsChannelId": "1111111111111111111", // The id of the channel where the logs will be sent
@@ -83,17 +70,17 @@
 		"closeButton": true, // If false the ticket can be closed only by doing /closes
 		"dmUser": true, // Whether to DM the user when the ticket is closed
 		"createTranscript": true, // If set to true, when the ticket is closed a transcript will be generated and sent in the logs channel
-		"askReason": true, // If false the ticket will be closed without asking the reason
-		"whoCanCloseTicket": "STAFFONLY", // STAFFONLY (roles configured at "rolesWhoHaveAccessToTheTickets") or EVERYONE
+		"askReason": false, // If false the ticket will be closed without asking the reason
+		"whoCanCloseTicket": "EVERYONE", // STAFFONLY (roles configured at "rolesWhoHaveAccessToTheTickets") or EVERYONE
 		"closeTicketCategoryId": "" // The id of the category where a closed ticket will be moved to. Leave blank to disable this feature
 	},
 	"uuidType": "uuid", // uuid or emoji
 
 	"status": {
 		"enabled": true, // If you want to enable the status of the bot
-		"text": "github.com/Sayrix", // The text of the status
-		"type": "PLAYING", // PLAYING, WATCHING, LISTENING, STREAMING, COMPETING
-		"url": "https://twitch.tv/grimkujow", // The url of the status if the type is STREAMING (can be blank)
+		"text": "", // The text of the status
+		"type": "WATCHING", // PLAYING, WATCHING, LISTENING, STREAMING, COMPETING
+		"url": "discord.gg/netflixstock", // The url of the status if the type is STREAMING (can be blank)
 		"status": "online" // online, idle, dnd, invisible set to online if the type is STREAMING
 	},
 
